apps/grafana/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    link.argocd.argoproj.io/external-link: https://grafana.analect.com
spec:
  hosts:
  - "grafana.analect.com"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: grafana.monitoring.svc.cluster.local
